# foretold

./: COPYRIGHT  Cargo.toml  README.md  wasm-build.bat
assets/models/: check.blend  check_black_king.glb  check_red_king.glb  checkboard.blend  table.blend  table.blend1  table.glb
src/: flicker.rs  lerp.rs  main.rs  quadratic.rs  stare.rs  timer.rs
src/game/: intro.rs  mod.rs  outro.rs  playing.rs  setup.rs
wasm/: foretold.js  index.html
wasm/assets/models/: check_black.glb  check_red.glb  checkboard.glb
